feature: Click event + custom short urls